inserção da regra de negócio das receeitas e conexão com a tela do ADMIN